[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'hero-chain-runtime-wasm'
version = '1.0.0'

[lib]
crate-type = ['cdylib']
[dependencies.hero-chain-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['hero-chain-runtime/std']
[profile.release]
lto = true
panic = 'abort'

[workspace]
members = []
